--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sneakers</title>
     <!--Custom CSS Link-->
-    <link rel="stylesheet" href="sneakers.css">
+    <link rel="stylesheet" href="style.css">
     <!--Bootstrap Link-->
     <link rel="stylesheet" href="css/bootstrap.css">
     <!--Font Awesome cdn Link-->
